{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 172,
  "lineage": "d4f8c3f2-e9b1-e3ce-ae90-174af4ae388f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jykim-elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087177b735b6b48ab",
            "association_id": "eipassoc-0732f498e6645bf71",
            "domain": "vpc",
            "id": "eipalloc-087177b735b6b48ab",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-051b1c8a1346138c6",
            "private_dns": "ip-192-168-16-62.ap-northeast-2.compute.internal",
            "private_ip": "192.168.16.62",
            "public_dns": "ec2-13-124-130-52.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.130.52",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jykim-elastic-ip"
            },
            "tags_all": {
              "Name": "jykim-elastic-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jykim-ec2-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0454bb2fefc7de534",
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:instance/i-0b80e553c6e5719d6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jykim-ec2-instance-my-profile2",
            "id": "i-0b80e553c6e5719d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "juyunkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098290b4cd73c1390",
            "private_dns": "ip-192-168-2-161.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.161",
            "public_dns": "ec2-43-200-253-9.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.253.9",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e6dfa7cc77aa3ef1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0953d58318af98fa4",
            "tags": {
              "Name": "jykim-ec2-bastion"
            },
            "tags_all": {
              "Name": "jykim-ec2-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0248f8e3ab4af511e"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jykim-ec2-instance-my-profile2",
            "aws_security_group.jykim-sg-bastion",
            "aws_subnet.jykim-public-subnet-a",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jykim-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:internet-gateway/igw-097ca95636ed66a32",
            "id": "igw-097ca95636ed66a32",
            "owner_id": "252340876984",
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "jykim-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087177b735b6b48ab",
            "association_id": "eipassoc-0732f498e6645bf71",
            "connectivity_type": "public",
            "id": "nat-020f3d9282912a2ac",
            "network_interface_id": "eni-051b1c8a1346138c6",
            "private_ip": "192.168.16.62",
            "public_ip": "13.124.130.52",
            "subnet_id": "subnet-009ec446041a2d5fb",
            "tags": {
              "Name": "jykim-nat-gateway"
            },
            "tags_all": {
              "Name": "jykim-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.jykim-elastic-ip",
            "aws_subnet.jykim-public-subnet-c",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jykim-route-table-pri-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-07811b60fc7dcd747",
            "id": "rtb-07811b60fc7dcd747",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-020f3d9282912a2ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-route-table-pri-sub-a"
            },
            "tags_all": {
              "Name": "jykim-route-table-pri-sub-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jykim-route-table-pri-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-0155e28ccd7842f4e",
            "id": "rtb-0155e28ccd7842f4e",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-020f3d9282912a2ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-route-table-pri-sub-c"
            },
            "tags_all": {
              "Name": "jykim-route-table-pri-sub-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jykim-route-table-pri-sub-db-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-0cb6de7eb8d1d99d8",
            "id": "rtb-0cb6de7eb8d1d99d8",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-020f3d9282912a2ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-route-table-pri-sub-db-a"
            },
            "tags_all": {
              "Name": "jykim-route-table-pri-sub-db-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jykim-route-table-pri-sub-db-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-0b742e24161e289cb",
            "id": "rtb-0b742e24161e289cb",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-020f3d9282912a2ac",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-route-table-pri-sub-db-c"
            },
            "tags_all": {
              "Name": "jykim-route-table-pri-sub-db-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jykim-route-table-pub-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-0b67acae8e53e1427",
            "id": "rtb-0b67acae8e53e1427",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097ca95636ed66a32",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-route-table-pub-sub-a"
            },
            "tags_all": {
              "Name": "jykim-route-table-pub-sub-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jykim-internet-gateway",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jykim-route-table-pub-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:route-table/rtb-05a95a118c0fe88e8",
            "id": "rtb-05a95a118c0fe88e8",
            "owner_id": "252340876984",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097ca95636ed66a32",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "jykim-route-table-pub-sub-c"
            },
            "tags_all": {
              "Name": "jykim-route-table-pub-sub-c"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jykim-internet-gateway",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jykim-route-association-pri-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ae8a9e49f97486f",
            "route_table_id": "rtb-07811b60fc7dcd747",
            "subnet_id": "subnet-0e14377fb33b2bba9"
          },
          "dependencies": [
            "aws_eip.jykim-elastic-ip",
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_route_table.jykim-route-table-pri-sub-a",
            "aws_subnet.jykim-private-subnet-a",
            "aws_subnet.jykim-public-subnet-c",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jykim-route-association-pri-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f8138b24eb5e86f",
            "route_table_id": "rtb-0155e28ccd7842f4e",
            "subnet_id": "subnet-0df25d53543ba23ff"
          },
          "dependencies": [
            "aws_eip.jykim-elastic-ip",
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_route_table.jykim-route-table-pri-sub-c",
            "aws_subnet.jykim-private-subnet-c",
            "aws_subnet.jykim-public-subnet-c",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jykim-route-association-pri-sub-db-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8b91f302f968898",
            "route_table_id": "rtb-0cb6de7eb8d1d99d8",
            "subnet_id": "subnet-0ece595309b882e26"
          },
          "dependencies": [
            "aws_eip.jykim-elastic-ip",
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_route_table.jykim-route-table-pri-sub-db-a",
            "aws_subnet.jykim-private-subnet-db-a",
            "aws_subnet.jykim-public-subnet-c",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jykim-route-association-pri-sub-db-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026302e3b451adcaa",
            "route_table_id": "rtb-0b742e24161e289cb",
            "subnet_id": "subnet-03d9c3c0290075b4b"
          },
          "dependencies": [
            "aws_eip.jykim-elastic-ip",
            "aws_nat_gateway.jykim-nat-gateway",
            "aws_route_table.jykim-route-table-pri-sub-db-c",
            "aws_subnet.jykim-private-subnet-db-c",
            "aws_subnet.jykim-public-subnet-c",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jykim-route-association-pub-sub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0edc2953bf6020921",
            "route_table_id": "rtb-0b67acae8e53e1427",
            "subnet_id": "subnet-0953d58318af98fa4"
          },
          "dependencies": [
            "aws_internet_gateway.jykim-internet-gateway",
            "aws_route_table.jykim-route-table-pub-sub-a",
            "aws_subnet.jykim-public-subnet-a",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jykim-route-association-pub-sub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5c38093517cbf4a",
            "route_table_id": "rtb-05a95a118c0fe88e8",
            "subnet_id": "subnet-009ec446041a2d5fb"
          },
          "dependencies": [
            "aws_internet_gateway.jykim-internet-gateway",
            "aws_route_table.jykim-route-table-pub-sub-c",
            "aws_subnet.jykim-public-subnet-c",
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jykim-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:security-group/sg-0248f8e3ab4af511e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress security_group_rule for bastion",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0248f8e3ab4af511e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ingress security_group_rule for bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "jykim-sg-bastion",
            "name_prefix": "",
            "owner_id": "252340876984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jykim-sg-bastion"
            },
            "tags_all": {
              "Name": "jykim-sg-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_db_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:security-group/sg-05d3138abdada25af",
            "description": "Database Security Group",
            "egress": [],
            "id": "sg-05d3138abdada25af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound traffic to the database port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-db-alb-sg",
            "name_prefix": "",
            "owner_id": "252340876984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-db-alb-sg"
            },
            "tags_all": {
              "Name": "my-db-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jykim-private-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-0e14377fb33b2bba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e14377fb33b2bba9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-a",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-a",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jykim-private-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-0df25d53543ba23ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df25d53543ba23ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-c",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-c",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jykim-private-subnet-db-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-0ece595309b882e26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ece595309b882e26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-db-a",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-db-a",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jykim-private-subnet-db-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-03d9c3c0290075b4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d9c3c0290075b4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-private-subnet-db-c",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "jykim-private-subnet-db-c",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared"
            },
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jykim-public-subnet-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-0953d58318af98fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0953d58318af98fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-public-subnet-a",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jykim-public-subnet-a",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jykim-public-subnet-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:subnet/subnet-009ec446041a2d5fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009ec446041a2d5fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "252340876984",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "jykim-public-subnet-c",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "jykim-public-subnet-c",
              "kubernetes.io/cluster/jykim-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f8ab66896d9cbec2"
          },
          "dependencies": [
            "aws_vpc.jykim-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jykim-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:252340876984:vpc/vpc-0f8ab66896d9cbec2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-00dcf273695523f31",
            "default_route_table_id": "rtb-06d4a7700ddf73a36",
            "default_security_group_id": "sg-0b3e1d6649a5e5c5d",
            "dhcp_options_id": "dopt-03b4be9464adc218b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f8ab66896d9cbec2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d4a7700ddf73a36",
            "owner_id": "252340876984",
            "tags": {
              "Name": "jykim-vpc"
            },
            "tags_all": {
              "Name": "jykim-vpc"
            }
          }
        }
      ]
    }
  ]
}